Collect property data

--- a/lib/src/test/resources/ExampleDtoSourceClass.java.example
+++ b/lib/src/test/resources/ExampleDtoSourceClass.java.example
@@ -47,6 +47,10 @@ public class ExampleDtoSourceClass {
         return longProperty;
     }
 
+    public void setLongProperty(long longVal) {
+        this.longProperty = longVal;
+    }
+
     public boolean isBooleanProperty() {
         return booleanProperty;
     }
