Show test stdout on gradle command line

--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -32,6 +32,13 @@ java {
     }
 }
 
+test {
+    testLogging {
+        outputs.upToDateWhen {false}
+        showStandardStreams = true
+    }
+}
+
 tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
