--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -16,12 +16,12 @@ repositories {
     mavenCentral()
 }
 
-dependencies { 
-    testImplementation 'org.jooq:joor-java-8:0.9.14'
+dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
     api "io.vavr:vavr:0.10.4"
     testAnnotationProcessor 'com.google.auto.service:auto-service:1.0.+'
     testImplementation 'com.google.auto.service:auto-service:1.0.+'
+    testImplementation 'commons-io:commons-io:2.13.0'
 
 }
 
