--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -31,14 +31,14 @@ publishing {
         maven(MavenPublication) {
             groupId = 'solutions.sulfura'
             artifactId = 'gen-d'
-            version = '1.0-beta'
+            version = '1.0-SNAPSHOT'
 
             from components.java
         }
     }
     repositories {
         maven {
-            url "https://gitlab.com/api/v4/46985246/packages/maven"
+            url "https://gitlab.com/api/v4/projects/46985246/packages/maven"
             credentials(HttpHeaderCredentials) {
                 name = "Job-Token"
                 value = System.getenv("CI_JOB_TOKEN")
