Setup java toolchain

--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -17,6 +17,12 @@ repositories {
     mavenCentral()
 }
 
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(21))
+    }
+}
+
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
     api "io.vavr:vavr:0.10.4"
