--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -17,17 +17,13 @@ repositories {
     mavenCentral()
 }
 
-java {
-    toolchain {
-        languageVersion.set(JavaLanguageVersion.of(21))
-    }
-}
-
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
     api "io.vavr:vavr:0.10.4"
-    testAnnotationProcessor 'com.google.auto.service:auto-service:1.0.+'
-    testImplementation 'com.google.auto.service:auto-service:1.0.+'
+    testAnnotationProcessor 'com.google.auto.service:auto-service:1.1.+'
+    testImplementation 'com.google.auto.service:auto-service:1.1.+'
+    annotationProcessor 'com.google.auto.service:auto-service:1.1.+'
+    implementation 'com.google.auto.service:auto-service-annotations:1.1.1'
     testImplementation 'commons-io:commons-io:2.13.0'
 
 }
