--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 publishing {
     publications {
         maven(MavenPublication) {
-            groupId = 'solutions.sulfura'
+            groupId = 'com.digitalizat'
             artifactId = 'gen-d'
             version = '1.0-SNAPSHOT'
 
@@ -40,7 +40,7 @@ publishing {
     }
     repositories {
         maven {
-            url "https://gitlab.com/api/v4/projects/46985246/packages/maven"
+            url "https://gitlab.com/api/v4/projects/157/packages/maven"
             credentials(HttpHeaderCredentials) {
                 name = "Job-Token"
                 value = System.getenv("CI_JOB_TOKEN")
