--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -36,7 +36,7 @@ publishing {
     }
     repositories {
         maven {
-            url "https://gitlab.com/api/v4/projects/157/packages/maven"
+            url "https://gitlab.digitalizat.com/api/v4/projects/157/packages/maven"
             credentials(HttpHeaderCredentials) {
                 name = "Job-Token"
                 value = System.getenv("CI_JOB_TOKEN")
