Improvements on documentation remove update operation from DtoListFieldConf

--- a/gen-d-annotation-processor/build.gradle
+++ b/gen-d-annotation-processor/build.gradle
@@ -57,6 +57,8 @@ java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(8)
     }
+    withJavadocJar()
+    withSourcesJar()
 }
 
 test {
