--- a/gen-d-api/build.gradle
+++ b/gen-d-api/build.gradle
@@ -3,6 +3,30 @@ plugins {
     id 'maven-publish'
 }
 
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = 'com.digitalizat'
+            artifactId = 'gen-d-api'
+            version = '1.0-RELEASE'
+
+            from components.java
+        }
+    }
+    repositories {
+        maven {
+            url "https://gitlab.digitalizat.com/api/v4/projects/157/packages/maven"
+            credentials(HttpHeaderCredentials) {
+                name = "Job-Token"
+                value = System.getenv("CI_JOB_TOKEN")
+            }
+            authentication {
+                header(HttpHeaderAuthentication)
+            }
+        }
+    }
+}
+
 // Apply a specific Java toolchain to ease working on different environments.
 java {
     toolchain {
