--- a/gen-d-annotation-processor/build.gradle
+++ b/gen-d-annotation-processor/build.gradle
@@ -31,7 +31,7 @@ publishing {
         maven(MavenPublication) {
             groupId = 'com.digitalizat'
             artifactId = 'gen-d-annotation-processor'
-            version = '1.0-RELEASE'
+            version = '1.1.0-SNAPSHOT'
 
             from components.java
         }
