--- a/gen-d-api/build.gradle
+++ b/gen-d-api/build.gradle
@@ -8,7 +8,7 @@ publishing {
         maven(MavenPublication) {
             groupId = 'com.digitalizat'
             artifactId = 'gen-d-api'
-            version = '1.0-RELEASE'
+            version = '1.1.0-SNAPSHOT'
 
             from components.java
         }
