Make Projection builders easier to use

--- a/build.gradle
+++ b/build.gradle
@@ -5,3 +5,7 @@ plugins {
 tasks.register('publish') {
     dependsOn subprojects*.publish
 }
+
+tasks.register('publishMavenPublicationToMavenLocal') {
+    dependsOn subprojects*.publishMavenPublicationToMavenLocal
+}
