--- a/projections-dsl/build.gradle
+++ b/projections-dsl/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'maven-publish'
 }
 
-group = 'cloud.sulfura'
+group = 'solutions.sulfura'
 version = '0.1'
 
 repositories {
@@ -14,11 +14,23 @@ repositories {
 publishing {
     publications {
         maven(MavenPublication) {
-            groupId = 'cloud.sulfura'
+            groupId = 'solutions.sulfura'
             artifactId = 'gen-d-annotation-processor'
-            version = '1.1.0-SNAPSHOT'
+            version = '0.1-SNAPSHOT'
 
             from components.java
+        }
+    }
+    repositories {
+        maven {
+            url "https://gitlab.com/api/v4/projects/46985246/packages/maven"
+            credentials(HttpHeaderCredentials) {
+                name = "Job-Token"
+                value = System.getenv("CI_JOB_TOKEN")
+            }
+            authentication {
+                header(HttpHeaderAuthentication)
+            }
         }
     }
 }
