--- a/projections-dsl/build.gradle
+++ b/projections-dsl/build.gradle
@@ -36,6 +36,7 @@ publishing {
 }
 
 dependencies {
+    api "io.vavr:vavr:0.10.4"
     implementation project(':gen-d-api')
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
