--- a/gen-d-annotation-processor/build.gradle
+++ b/gen-d-annotation-processor/build.gradle
@@ -19,7 +19,7 @@ dependencies {
 publishing {
     publications {
         maven(MavenPublication) {
-            groupId = 'solutions.sulfura'
+            groupId = 'com.digitalizat'
             artifactId = 'gen-d-annotation-processor'
             version = '1.1.0-SNAPSHOT'
 
@@ -28,7 +28,7 @@ publishing {
     }
     repositories {
         maven {
-            url "https://gitlab.com/api/v4/projects/46985246/packages/maven"
+            url "https://gitlab.digitalizat.com/api/v4/projects/157/packages/maven"
             credentials(HttpHeaderCredentials) {
                 name = "Job-Token"
                 value = System.getenv("CI_JOB_TOKEN")
