--- a/projections-dsl/build.gradle
+++ b/projections-dsl/build.gradle
@@ -21,7 +21,7 @@ dependencies {
 publishing {
     publications {
         maven(MavenPublication) {
-            groupId = 'solutions.sulfura'
+            groupId = 'com.digitalizat'
             artifactId = 'gen-d-annotation-processor'
             version = '0.1-SNAPSHOT'
 
@@ -30,7 +30,7 @@ publishing {
     }
     repositories {
         maven {
-            url "https://gitlab.com/api/v4/projects/46985246/packages/maven"
+            url "https://gitlab.digitalizat.com/api/v4/projects/157/packages/maven"
             credentials(HttpHeaderCredentials) {
                 name = "Job-Token"
                 value = System.getenv("CI_JOB_TOKEN")
