--- a/projections-dsl/build.gradle
+++ b/projections-dsl/build.gradle
@@ -22,8 +22,8 @@ publishing {
     publications {
         maven(MavenPublication) {
             groupId = 'solutions.sulfura'
-            artifactId = 'gen-d-annotation-processor'
-            version = '0.1-SNAPSHOT'
+            artifactId = 'gen-d-projections-dsl'
+            version = '1.1.0-SNAPSHOT'
 
             from components.java
         }
