--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,11 @@ plugins {
     id 'java-library'
 }
 
+allprojects {
+    group = 'solutions.sulfura'
+    version = '1.1.0-RELEASE'
+}
+
 tasks.register('publish') {
     dependsOn subprojects*.publish
 }
