--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 allprojects {
     group = 'solutions.sulfura'
-    version = '1.1.0-RELEASE'
+    version = '1.2.0-SNAPSHOT'
 }
 
 tasks.register('publish') {
