--- a/gen-d-annotation-processor/build.gradle
+++ b/gen-d-annotation-processor/build.gradle
@@ -26,7 +26,9 @@ publishing {
     }
     repositories {
         maven {
-            url "https://gitlab.com/api/v4/projects/67836497/packages/maven"
+
+            name "Public Gitlab"
+            url "public-package-registry.sulfura.solutions"
             credentials(HttpHeaderCredentials) {
                 name = "Job-Token"
                 value = System.getenv("CI_JOB_TOKEN")
