--- a/projections-dsl/build.gradle
+++ b/projections-dsl/build.gradle
@@ -25,7 +25,9 @@ publishing {
     }
     repositories {
         maven {
-            url "https://gitlab.com/api/v4/projects/67836497/packages/maven"
+
+            name "Public Gitlab"
+            url "public-package-registry.sulfura.solutions"
             credentials(HttpHeaderCredentials) {
                 name = "Job-Token"
                 value = System.getenv("CI_JOB_TOKEN")
@@ -33,6 +35,7 @@ publishing {
             authentication {
                 header(HttpHeaderAuthentication)
             }
+
         }
     }
 }
