--- a/gen-d-annotation-processor/build.gradle
+++ b/gen-d-annotation-processor/build.gradle
@@ -27,7 +27,7 @@ publishing {
     repositories {
         maven {
 
-            name "Public Gitlab"
+            name "public-gitlab"
             url "public-package-registry.sulfura.solutions"
             credentials(HttpHeaderCredentials) {
                 name = "Job-Token"
