--- a/projections-dsl/build.gradle
+++ b/projections-dsl/build.gradle
@@ -26,7 +26,7 @@ publishing {
     repositories {
         maven {
 
-            name "Public Gitlab"
+            name "public-gitlab"
             url "public-package-registry.sulfura.solutions"
             credentials(HttpHeaderCredentials) {
                 name = "Job-Token"
