Revert "Update Maven repository URLs to use HTTPS"
This reverts commit f2d8fc18954c760982f80952c854cb65120791e6.

--- a/gen-d-annotation-processor/build.gradle
+++ b/gen-d-annotation-processor/build.gradle
@@ -28,7 +28,7 @@ publishing {
         maven {
 
             name "public-gitlab"
-            url "https://public-package-registry.sulfura.solutions"
+            url "public-package-registry.sulfura.solutions"
             credentials(HttpHeaderCredentials) {
                 name = "Job-Token"
                 value = System.getenv("CI_JOB_TOKEN")
