--- a/gen-d-api/build.gradle
+++ b/gen-d-api/build.gradle
@@ -23,7 +23,7 @@ publishing {
     repositories {
         maven {
             name "public-gitlab"
-            url "https://public-package-registry.sulfura.solutions"
+            url "public-package-registry.sulfura.solutions"
             credentials(HttpHeaderCredentials) {
                 name = "Job-Token"
                 value = System.getenv("CI_JOB_TOKEN")
