Revert "Update Maven repository URL to public registry"
This reverts commit 9864885a1e640a33cab26438fd1c3332c313fbb2.

--- a/gen-d-annotation-processor/build.gradle
+++ b/gen-d-annotation-processor/build.gradle
@@ -27,7 +27,7 @@ publishing {
     repositories {
         maven {
 
-            name "public-gitlab"
+            name "Public Gitlab"
             url "public-package-registry.sulfura.solutions"
             credentials(HttpHeaderCredentials) {
                 name = "Job-Token"
