--- a/gen-d-annotation-processor/build.gradle
+++ b/gen-d-annotation-processor/build.gradle
@@ -26,9 +26,7 @@ publishing {
     }
     repositories {
         maven {
-
-            name "Public Gitlab"
-            url "public-package-registry.sulfura.solutions"
+            url "https://gitlab.com/api/v4/projects/67836497/packages/maven"
             credentials(HttpHeaderCredentials) {
                 name = "Job-Token"
                 value = System.getenv("CI_JOB_TOKEN")
