--- a/gen-d-api/build.gradle
+++ b/gen-d-api/build.gradle
@@ -22,8 +22,8 @@ publishing {
     }
     repositories {
         maven {
-            name "Public Gitlab"
-            url "public-package-registry.sulfura.solutions"
+            name "Gitlab"
+            url "https://gitlab.com/api/v4/projects/67836497/packages/maven"
             credentials(HttpHeaderCredentials) {
                 name = "Job-Token"
                 value = System.getenv("CI_JOB_TOKEN")
