--- a/projections-dsl/build.gradle
+++ b/projections-dsl/build.gradle
@@ -25,9 +25,7 @@ publishing {
     }
     repositories {
         maven {
-
-            name "Public Gitlab"
-            url "public-package-registry.sulfura.solutions"
+            url "https://gitlab.com/api/v4/projects/67836497/packages/maven"
             credentials(HttpHeaderCredentials) {
                 name = "Job-Token"
                 value = System.getenv("CI_JOB_TOKEN")
@@ -35,7 +33,6 @@ publishing {
             authentication {
                 header(HttpHeaderAuthentication)
             }
-
         }
     }
 }
