Rename `hyper-kit-dtos-api` to `hyper-kit-dto-api` across project

--- a/hyper-kit-dto-api/build.gradle
+++ b/hyper-kit-dto-api/build.gradle
@@ -16,7 +16,7 @@ dependencies {
 publishing {
     publications {
         maven(MavenPublication) {
-            artifactId = 'hyper-kit-dtos-api'
+            artifactId = 'hyper-kit-dto-api'
             from components.java
         }
     }
