--- a/settings.gradle
+++ b/settings.gradle
@@ -10,7 +10,7 @@ plugins {
     id 'org.gradle.toolchains.foojay-resolver-convention' version '0.4.0'
 }
 
-rootProject.name = 'hyper-kit'
-include 'hyper-kit-dto-generator-plugin'
-include 'hyper-kit-dto-api'
-include 'hyper-kit-projections-dsl'
+rootProject.name = 'hyperkit'
+include 'hyperkit-dto-generator-plugin'
+include 'hyperkit-dto-api'
+include 'hyperkit-projections-dsl'
