--- a/settings.gradle
+++ b/settings.gradle
@@ -14,4 +14,5 @@ rootProject.name = 'hyperkit'
 include 'hyperkit-dto-generator-plugin'
 include 'hyperkit-dto-api'
 include 'hyperkit-projections-dsl'
-include 'hyperkit-spring-utils'
+include 'hyperkit-utils-spring'
+
