--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,12 @@
-
 allprojects {
-    group = 'solutions.sulfura'
-    version = '1.3.0-SNAPSHOT'
+    group = "solutions.sulfura"
+    version = "1.3.0-SNAPSHOT"
 }
 
-tasks.register('publish') {
-    dependsOn subprojects*.publish
+tasks.register("publish") {
+    dependsOn(subprojects.map { it.tasks.named("publish") })
 }
 
-tasks.register('publishMavenPublicationToMavenLocal') {
-    dependsOn subprojects*.publishMavenPublicationToMavenLocal
+tasks.register("publishMavenPublicationToMavenLocal") {
+    dependsOn(subprojects.map { it.tasks.named("publishMavenPublicationToMavenLocal") })
 }
