--- a/settings.gradle
+++ b/settings.gradle
@@ -7,13 +7,12 @@ pluginManagement {
 
 plugins {
     // Apply the foojay-resolver plugin to allow automatic download of JDKs
-    id 'org.gradle.toolchains.foojay-resolver-convention' version '0.4.0'
+    id("org.gradle.toolchains.foojay-resolver-convention") version "0.4.0"
 }
 
-rootProject.name = 'hyperkit'
-include 'hyperkit-dto-generator-plugin'
-include 'hyperkit-dto-api'
-include 'hyperkit-projections-dsl'
-include 'hyperkit-utils-spring'
-include 'hyperkit-utils-serialization'
-
+rootProject.name = "hyperkit"
+include("hyperkit-dto-generator-plugin")
+include("hyperkit-dto-api")
+include("hyperkit-projections-dsl")
+include("hyperkit-utils-spring")
+include("hyperkit-utils-serialization")
