--- a/.gitattributes
+++ b/.gitattributes
@@ -6,4 +6,5 @@
 
 # These are Windows script files and should use crlf
 *.bat           text eol=crlf
-
+# Se tup line ending handling at the project level
+*        text=auto
