--- a/hyperkit-examples/dto-generation-maven-example/pom.xml
+++ b/hyperkit-examples/dto-generation-maven-example/pom.xml
@@ -40,6 +40,7 @@
         <maven.compiler.release>17</maven.compiler.release>
         <maven-plugin-tools.version>3.15.2</maven-plugin-tools.version>
         <kotlin.version>2.2.21</kotlin.version>
+        <hyperkit.version>6.2.2-RELEASE</hyperkit.version>
     </properties>
 
     <dependencyManagement>
@@ -83,7 +84,6 @@
                 <groupId>solutions.sulfura</groupId>
                 <artifactId>hyperkit-dto-generator-maven-plugin</artifactId>
                 <version>${hyperkit.version}</version>
-
                 <executions>
                     <execution>
                         <id>generate-dtos</id>
